paperless/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: paperless
  name: paperless
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      service: paperless
  template:
    metadata:
      labels:
        service: paperless
    spec:
      enableServiceLinks: false
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:2.20.14
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
            - name: consume
              mountPath: /usr/src/paperless/consume
            - name: export
              mountPath: /usr/src/paperless/export
          readinessProbe:
            httpGet:
              path: /api/
              port: 8000
              httpHeaders:
                - name: Host
                  value: docs.stefanmuraru.com
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/
              port: 8000
              httpHeaders:
                - name: Host
                  value: docs.stefanmuraru.com
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2000m"
              memory: 2Gi
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media
        - name: consume
          persistentVolumeClaim:
            claimName: paperless-consume
        - name: export
          persistentVolumeClaim:
            claimName: paperless-export
