paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: paperless
  name: paperless
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    service: paperless
